added basic navigation

--- a/about.html
+++ b/about.html
@@ -24,14 +24,23 @@
     <div class="container-fluid">
         <div class="header row">
 
-            <div class="home col-md-4 col-sm-4">
+            <div class="home col-md-6 col-sm-6">
                 <a href="./index.html">Home</a>
             </div>
-            <div class="about col-md-4 col-sm-4">
-                <a href="./about.html">About</a>
-            </div>
-            <div class="contact col-md-4 col-sm-4">
+            <div class="about col-md-6 col-sm-6">
                 <a href="./contact.html">Contact</a>
+            </div>
+
+        </div>
+
+        <div class="body row">
+
+            <div>
+                My name is Matt Burzette and I am currently a senior in the Software Engineering program at ASU. <br>
+                Take a look at the RPG I am making in React called 'Tower'!
+            </div>
+            <div>
+                <a href="http://mattgroe.github.io/Tower" target="_blank">Tower</a>
             </div>
 
         </div>
