--- a/contact.html
+++ b/contact.html
@@ -24,14 +24,26 @@
     <div class="container-fluid">
         <div class="header row">
 
-            <div class="home col-md-4 col-sm-4">
+            <div class="home col-md-6 col-sm-6">
                 <a href="./index.html">Home</a>
             </div>
-            <div class="about col-md-4 col-sm-4">
+            <div class="about col-md-6 col-sm-6">
                 <a href="./about.html">About</a>
             </div>
-            <div class="contact col-md-4 col-sm-4">
-                <a href="./contact.html">Contact</a>
+
+        </div>
+
+        <div class="body row">
+
+            <div>
+                Matt Burzette
+            </div>
+            <div>
+                Photo
+            </div>
+            <div>
+                Links:
+                <a href="https://github.com/mburzette" target="_blank">Github</a>
             </div>
 
         </div>
